practice-troubleshooting-main/manifests/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-82265825-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82265825.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-app-82265825
            port:
              number: 8080
        pathType: Prefix
